# ankkanen-panel

./: CMakeLists.txt  README.md
src/: applicationmodel.cpp  desktopentry.cpp  main.cpp  mainmenu.cpp  mainwindow.cpp  taskbutton.cpp
src/include/: applicationmodel.hpp  desktopentry.hpp  mainmenu.hpp  mainwindow.hpp  taskbutton.hpp
src/ui/: mainmenu.ui  mainwindow.ui
